force-app/main/default/objects/Evaluation_Form__c/Evaluation_Form__c.object-meta.xml
<CustomObject>
    <label>Evaluation Form</label>
    <nameField>
        <displayFormat>EvalForm-{000000}</displayFormat>
        <label>Evaluation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluation Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>