force-app/main/default/objects/Evaluation_Form__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Billing Country on the Account on the Opportunity on the Evaluation form.</description>
    <formula>Opportunity__r.Account.BillingCountry</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>