force-app/main/default/objects/Evaluation_Form__c/fields/Account_Market__c.field-meta.xml
<CustomField>
    <fullName>Account_Market__c</fullName>
    <formula>Opportunity__r.Account_Key_Market__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Market</label>
    <type>Text</type>
</CustomField>