force-app/main/default/objects/Evaluation_Form__c/fields/Approver_for_items_more_than_ten__c.field-meta.xml
<CustomField>
    <fullName>Approver_for_items_more_than_ten__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver for items more than ten</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>