force-app/main/default/objects/Evaluation_Form__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox to cancel demo requests that are no longer valid.</inlineHelpText>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>