force-app/main/default/objects/Evaluation_Form__c/fields/CEVA_Delivery__c.field-meta.xml
<CustomField>
    <fullName>CEVA_Delivery__c</fullName>
    <label>CEVA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chas</fullName>
            </value>
            <value>
                <fullName>Ken</fullName>
            </value>
            <value>
                <fullName>Lori</fullName>
            </value>
            <value>
                <fullName>Martha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>