force-app/main/default/objects/Evaluation_Form__c/fields/Charge_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Charge_To_Account__c</fullName>
    <formula>CreatedBy.Manager.LastName + &apos;,&apos; +  CreatedBy.Manager.FirstName + &apos; &apos; +  CreatedBy.rf_CostCenter__c + &apos;.6470&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge To Account</label>
    <type>Text</type>
</CustomField>