force-app/main/default/objects/Evaluation_Form__c/fields/Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_Notes__c</fullName>
    <label>Comments/Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>