force-app/main/default/objects/Evaluation_Form__c/fields/Comments_Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Comments_Special_Instructions__c</fullName>
    <label>Comments/ Special Instructions</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>