force-app/main/default/objects/Evaluation_Form__c/fields/Consignment_Number__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Number__c</fullName>
    <description>This field has been created as part of CR00029666.</description>
    <label>Consignment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>