force-app/main/default/objects/Evaluation_Form__c/fields/Contact_Name_Return__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Return__c</fullName>
    <label>Contact Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>