force-app/main/default/objects/Evaluation_Form__c/fields/Contact_Phone_Return__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone_Return__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>