force-app/main/default/objects/Evaluation_Form__c/fields/Courier_Name__c.field-meta.xml
<CustomField>
    <fullName>Courier_Name__c</fullName>
    <description>This field has been created as part of CR00029666.</description>
    <label>Courier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>