force-app/main/default/objects/Evaluation_Form__c/fields/CRS__c.field-meta.xml
<CustomField>
    <fullName>CRS__c</fullName>
    <formula>Opportunity__r.CRS_OMS_CA__r.FirstName +&quot; &quot;+Opportunity__r.CRS_OMS_CA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRS</label>
    <type>Text</type>
</CustomField>