force-app/main/default/objects/Evaluation_Form__c/fields/CRS_email__c.field-meta.xml
<CustomField>
    <fullName>CRS_email__c</fullName>
    <label>CRS email</label>
    <type>Email</type>
</CustomField>