force-app/main/default/objects/Evaluation_Form__c/fields/CSR_Address__c.field-meta.xml
<CustomField>
    <fullName>CSR_Address__c</fullName>
    <formula>$User.Street</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Address</label>
    <type>Text</type>
</CustomField>