force-app/main/default/objects/Evaluation_Form__c/fields/CSR_City__c.field-meta.xml
<CustomField>
    <fullName>CSR_City__c</fullName>
    <formula>$User.City</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR City</label>
    <type>Text</type>
</CustomField>