force-app/main/default/objects/Evaluation_Form__c/fields/CSR_State__c.field-meta.xml
<CustomField>
    <fullName>CSR_State__c</fullName>
    <formula>$User.State</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR State</label>
    <type>Text</type>
</CustomField>