force-app/main/default/objects/Evaluation_Form__c/fields/CSR_Zip__c.field-meta.xml
<CustomField>
    <fullName>CSR_Zip__c</fullName>
    <formula>$User.PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Zip</label>
    <type>Text</type>
</CustomField>