force-app/main/default/objects/Evaluation_Form__c/fields/Customer_Service_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email_3__c</fullName>
    <label>Customer Service Email 3</label>
    <type>Email</type>
</CustomField>