force-app/main/default/objects/Evaluation_Form__c/fields/Customer_Service_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Email__c</fullName>
    <description>Customer Service email address. Used tor notifications.</description>
    <label>Customer Service Email</label>
    <type>Email</type>
</CustomField>