force-app/main/default/objects/Evaluation_Form__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>