force-app/main/default/objects/Evaluation_Form__c/fields/Decon_Completed_By_Community_Business_De__c.field-meta.xml
<CustomField>
    <fullName>Decon_Completed_By_Community_Business_De__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decon Completed by Community BDM</label>
    <type>Checkbox</type>
</CustomField>