force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_by_BDM__c.field-meta.xml
<CustomField>
    <fullName>Delivery_by_BDM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been created as part of CR00029666.</description>
    <label>Delivery by BDM</label>
    <type>Checkbox</type>
</CustomField>