force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_CEVA__c.field-meta.xml
<CustomField>
    <fullName>Delivery_CEVA__c</fullName>
    <label>Delivery BOL #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>