force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_Date_to_RDC__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_to_RDC__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>