force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_Deliver_To_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Deliver_To_Airport_Code__c</fullName>
    <label>Deliver To Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>