force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_Pickup_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Pickup_Airport_Code__c</fullName>
    <label>Pickup Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>