force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Responsiveness__c</fullName>
    <formula>Shipment_Date__c -  Rqst_Date_of_Delivery_to_Service_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>N. of days between Shipment Date and Demo Start Date: should not be greater than 0</inlineHelpText>
    <label>Delivery Responsiveness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>