force-app/main/default/objects/Evaluation_Form__c/fields/Delivery_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Time__c</fullName>
    <description>This field has been created as part of CR00029666.</description>
    <label>Delivery Time</label>
    <type>DateTime</type>
</CustomField>