force-app/main/default/objects/Evaluation_Form__c/fields/Demo_Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>Demo_Actual_Duration__c</fullName>
    <formula>Product_Return_Date__c - Rqst_Date_of_Delivery_to_Service_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Actual Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>