force-app/main/default/objects/Evaluation_Form__c/fields/Demo_Duration__c.field-meta.xml
<CustomField>
    <fullName>Demo_Duration__c</fullName>
    <description>This field is used to calculate the duration between the start date and end date.</description>
    <formula>Evaluation_End_Date__c - Rqst_Date_of_Delivery_to_Service_Center__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demo Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>