force-app/main/default/objects/Evaluation_Form__c/fields/Demo_Eval_Co_ordinator__c.field-meta.xml
<CustomField>
    <fullName>Demo_Eval_Co_ordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo/Eval Co-ordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms6</relationshipName>
    <type>Lookup</type>
</CustomField>