force-app/main/default/objects/Evaluation_Form__c/fields/ERP_Customer_Nr__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Nr__c</fullName>
    <label>ERP Customer Nr</label>
    <length>10</length>
    <type>Text</type>
</CustomField>