force-app/main/default/objects/Evaluation_Form__c/fields/Evaluation_Blanket_Agreement_Completed__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Blanket_Agreement_Completed__c</fullName>
    <label>Evaluation Blanket Agreement Completed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>