force-app/main/default/objects/Evaluation_Form__c/fields/Evaluation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evaluation field to be checked by CRS once evaluation in complete</description>
    <label>Evaluation Completed</label>
    <type>Checkbox</type>
</CustomField>