force-app/main/default/objects/Evaluation_Form__c/fields/Evaluation_Specialist_1__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Specialist_1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Evaluation Requested to be handled by the Evaluation Specialist versus the CRS</description>
    <label>Evaluation Specialist 1</label>
    <type>Checkbox</type>
</CustomField>