force-app/main/default/objects/Evaluation_Form__c/fields/Evaluation_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>