force-app/main/default/objects/Evaluation_Form__c/fields/Evaluation_Status__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Status__c</fullName>
    <formula>IF( Cancelled__c = True, &quot;Cancelled&quot;,
 IF( Product_Sold__c = True, &quot;Product Sold&quot;, 
    IF( NOT(ISNULL( Product_Return_Date__c )) , &quot;Product Returned&quot;, 
      IF( NOT( ISNULL(  Requested_Pick_Up_Date_Time__c  ) ) , &quot;Requested Pick Up&quot;,
        IF(NOT( ISNULL(   Shipment_Date__c   ) ), &quot;Product Shipped&quot;,   TEXT(Approval_Status__c)  ) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluation Status</label>
    <type>Text</type>
</CustomField>