force-app/main/default/objects/Evaluation_Form__c/fields/GBU__c.field-meta.xml
<CustomField>
    <fullName>GBU__c</fullName>
    <label>GBU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FLC</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>PSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>