force-app/main/default/objects/Evaluation_Form__c/fields/has_contract__c.field-meta.xml
<CustomField>
    <fullName>has_contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has contract?</label>
    <type>Checkbox</type>
</CustomField>