force-app/main/default/objects/Evaluation_Form__c/fields/Hub_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Hub_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms5</relationshipName>
    <type>Lookup</type>
</CustomField>