force-app/main/default/objects/Evaluation_Form__c/fields/Invoice_Nr__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Nr__c</fullName>
    <inlineHelpText>If product was sold to customer, invoice nr is needed</inlineHelpText>
    <label>Invoice Nr.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>