force-app/main/default/objects/Evaluation_Form__c/fields/JDE_Customer__c.field-meta.xml
<CustomField>
    <fullName>JDE_Customer__c</fullName>
    <formula>Opportunity__r.Account.JDE_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Customer #</label>
    <type>Text</type>
</CustomField>