force-app/main/default/objects/Evaluation_Form__c/fields/JDE_Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>JDE_Employee_ID__c</fullName>
    <formula>$User.JDE_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JDE Employee ID</label>
    <type>Text</type>
</CustomField>