force-app/main/default/objects/Evaluation_Form__c/fields/Legal_Department_User__c.field-meta.xml
<CustomField>
    <fullName>Legal_Department_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Department User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms3</relationshipName>
    <type>Lookup</type>
</CustomField>