force-app/main/default/objects/Evaluation_Form__c/fields/Level_1_Manager__c.field-meta.xml
<CustomField>
    <fullName>Level_1_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level 1 Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evaluation_Forms4</relationshipName>
    <type>Lookup</type>
</CustomField>