force-app/main/default/objects/Evaluation_Form__c/fields/Lift_Gate_Required__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift Gate Required</label>
    <type>Checkbox</type>
</CustomField>