force-app/main/default/objects/Evaluation_Form__c/fields/MIA_Completed__c.field-meta.xml
<CustomField>
    <fullName>MIA_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been created as part of CR00029666.</description>
    <label>MIA Completed</label>
    <type>Checkbox</type>
</CustomField>