force-app/main/default/objects/Evaluation_Form__c/fields/N_C_PO_required__c.field-meta.xml
<CustomField>
    <fullName>N_C_PO_required__c</fullName>
    <label>N/C PO Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>