force-app/main/default/objects/Evaluation_Form__c/fields/Order_Entry_Email__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Email__c</fullName>
    <description>Email address of the Order Entry team. Used for notifications.</description>
    <label>Order Entry Email</label>
    <type>Email</type>
</CustomField>