force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_CEVA__c.field-meta.xml
<CustomField>
    <fullName>Pickup_CEVA__c</fullName>
    <label>Return BOL #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>