force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Comments__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Comments__c</fullName>
    <label>Return Comments / Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>