force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Date_from_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Date_from_Service_Center__c</fullName>
    <label>Pickup Date</label>
    <type>Date</type>
</CustomField>