force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_From__c.field-meta.xml
<CustomField>
    <fullName>Pickup_From__c</fullName>
    <label>Pickup From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>