force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_From_Delievery__c.field-meta.xml
<CustomField>
    <fullName>Pickup_From_Delievery__c</fullName>
    <description>Where is item coming from</description>
    <inlineHelpText>Where is item coming from</inlineHelpText>
    <label>Pickup From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RDC</fullName>
                <default>true</default>
                <label>RDC</label>
            </value>
            <value>
                <fullName>Service Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>