force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_RDC_Location__c.field-meta.xml
<CustomField>
    <fullName>Pickup_RDC_Location__c</fullName>
    <label>Return RDC Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>