force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Service_Center_BU__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Service_Center_BU__c</fullName>
    <formula>Pickup_Service_Center_Name__r.JDE_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Service Center BU</label>
    <type>Text</type>
</CustomField>