force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Service_Center_City__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Service_Center_City__c</fullName>
    <formula>Pickup_Service_Center_Name__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Service Center City</label>
    <type>Text</type>
</CustomField>