force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Service_Center_State__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Service_Center_State__c</fullName>
    <formula>Pickup_Service_Center_Name__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Service Center State</label>
    <type>Text</type>
</CustomField>