force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Service_Center_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Service_Center_Street_Address__c</fullName>
    <formula>Pickup_Service_Center_Name__r.Street_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Service Center Street Address</label>
    <type>Text</type>
</CustomField>