force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Service_Center_Zip__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Service_Center_Zip__c</fullName>
    <formula>Pickup_Service_Center_Name__r.Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Service Center Zip</label>
    <type>Text</type>
</CustomField>