force-app/main/default/objects/Evaluation_Form__c/fields/Pickup_Status__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Status__c</fullName>
    <label>Hill-Rom Return Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In-Transit</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>