force-app/main/default/objects/Evaluation_Form__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>If yes, PO #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>