force-app/main/default/objects/Evaluation_Form__c/fields/Primary_Contact_S_O_M__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_S_O_M__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact (S.O.M)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Evaluation Forms (Primary Contact (S.O.M))</relationshipLabel>
    <relationshipName>Evaluation_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>