force-app/main/default/objects/Evaluation_Form__c/fields/Primary_Contact_S_O_M_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_S_O_M_Phone__c</fullName>
    <label>Primary Contact (S.O.M) Phone</label>
    <type>Phone</type>
</CustomField>