force-app/main/default/objects/Evaluation_Form__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.GBU__c</field>
            <operation>equals</operation>
            <valueField>Product2.GBU__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Evaluation Forms</relationshipLabel>
    <relationshipName>Evaluation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>