force-app/main/default/objects/Evaluation_Form__c/fields/Product_Sold__c.field-meta.xml
<CustomField>
    <fullName>Product_Sold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Sold</label>
    <type>Checkbox</type>
</CustomField>