force-app/main/default/objects/Evaluation_Form__c/fields/Proof_of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Proof_of_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select when the document signed by the customer is received</inlineHelpText>
    <label>Proof of Delivery</label>
    <type>Checkbox</type>
</CustomField>