force-app/main/default/objects/Evaluation_Form__c/fields/RDC_Location__c.field-meta.xml
<CustomField>
    <fullName>RDC_Location__c</fullName>
    <label>Pickup RDC Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Atlanta</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Bell</fullName>
            </value>
            <value>
                <fullName>Pennsauken</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Charleston</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>