force-app/main/default/objects/Evaluation_Form__c/fields/Removal_by_BDM__c.field-meta.xml
<CustomField>
    <fullName>Removal_by_BDM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has been created as part of CR00029666.</description>
    <label>Removal by BDM</label>
    <type>Checkbox</type>
</CustomField>