force-app/main/default/objects/Evaluation_Form__c/fields/Removal_Responsiveness__c.field-meta.xml
<CustomField>
    <fullName>Removal_Responsiveness__c</fullName>
    <formula>Product_Return_Date__c - Scheduled_Demo_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>N. of days between Product Return Date and Scheduled Demo End Date (Demo Start Date + 30)</inlineHelpText>
    <label>Removal Responsiveness</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>